--- a/Module01/ex02/Makefile
+++ b/Module01/ex02/Makefile
@@ -1,10 +1,12 @@
 CC     = c++
-SRC    = main.cpp PhoneBook.cpp
+SRC    = main.cpp
 OBJ    = $(SRC:%.cpp=%.o)
 CFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME   = PhoneBook
+NAME   = a.out
+# HEADERS   = *.hpp
 
 all: $(NAME)
+ # $(HEADERS)
 
 $(NAME): $(OBJ)
 	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
