--- a/Module01/ex03/Makefile
+++ b/Module01/ex03/Makefile
@@ -1,8 +1,8 @@
 CC     = c++
-SRC    = main.cpp PhoneBook.cpp
+SRC    = main.cpp HumanA.cpp HumanB.cpp Weapon.cpp
 OBJ    = $(SRC:%.cpp=%.o)
 CFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME   = PhoneBook
+NAME   = a.out
 
 all: $(NAME)
 
