DO NOT USE CFLAGS KEYWORD

--- a/Module00/ex00/Makefile
+++ b/Module00/ex00/Makefile
@@ -1,13 +1,13 @@
 CC     = c++
 SRC    = megaphone.cpp
 OBJ    = $(SRC:%.cpp=%.o)
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME   = megaphone
 
 all:	$(NAME)
 
 NAME: $(OBJ)
-	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+	$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	rm -rf *.o
