--- a/Module00/ex02/Makefile
+++ b/Module00/ex02/Makefile
@@ -1,13 +1,13 @@
 CC     = c++
 SRC    = tests.cpp Account.cpp
 OBJ    = $(SRC:%.cpp=%.o)
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME   = a.out
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+	$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	rm -rf *.o
