exercise 06 is finished without using STL

--- a/Module01/ex06/Makefile
+++ b/Module01/ex06/Makefile
@@ -2,7 +2,7 @@ CC     = c++
 SRC    = main.cpp Harl.cpp
 OBJ    = $(SRC:%.cpp=%.o)
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME   = harl
+NAME   = harlFilter
 
 all: $(NAME)
 
