--- a/Module01/ex03/Makefile
+++ b/Module01/ex03/Makefile
@@ -7,7 +7,7 @@ NAME   = a.out
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+	$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	rm -rf *.o
