--- a/Module01/ex02/Makefile
+++ b/Module01/ex02/Makefile
@@ -1,7 +1,7 @@
 CC     = c++
 SRC    = main.cpp
 OBJ    = $(SRC:%.cpp=%.o)
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME   = a.out
 # HEADERS   = *.hpp
 
@@ -9,7 +9,7 @@ all: $(NAME)
  # $(HEADERS)
 
 $(NAME): $(OBJ)
-	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+	$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	rm -rf *.o
