Polymorphism && prevent from object slicing

--- a/Module04/ex00/Makefile
+++ b/Module04/ex00/Makefile
@@ -1,13 +1,12 @@
-CC     = c++
-SRC    = main.cpp Animal.cpp Dog.cpp Cat.cpp
-OBJ    = $(SRC:%.cpp=%.o)
+CXX     = c++
+SRC    = main.cpp Animal.cpp Dog.cpp Cat.cpp WrongCat.cpp WrongAnimal.cpp
 CXXFLAGS = -Wall -Wextra -Werror -Wshadow -std=c++98
 NAME   = Animal
 
 all:	$(NAME)
 
 $(NAME): $(OBJ)
-	$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
+	$(CXX) $(CPPFLAGS) $(SRC) -o $(NAME)
 
 clean:
 	rm -rf *.o
