--- a/Module04/ex03/Makefile
+++ b/Module04/ex03/Makefile
@@ -1,12 +1,12 @@
-CXX     = c++
-SRC    = main.cpp AMateria.cpp Cure.cpp Ice.cpp Icharacter.cpp
-CXXFLAGS = -Wall -Wextra -Werror -Wshadow -std=c++98
-NAME   = a.out
+CXX		= c++
+SRC		= main.cpp AMateria.cpp Cure.cpp Ice.cpp Character.cpp MateriaSource.cpp
+CXXFLAGS	= -Wall -Wextra -Werror -Wshadow -std=c++98 -g3
+NAME		= a.out
 
 all:	$(NAME)
 
 $(NAME): $(OBJ)
-	$(CC) $(CPPFLAGS) $(SRC) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(SRC) -o $(NAME)
 
 clean:
 	rm -rf *.o
